--- a/src/main/resources/static/css/style1.css
+++ b/src/main/resources/static/css/style1.css
@@ -15,7 +15,7 @@ a {
     display: inline-block;
     padding: 25px 30px;
     margin: 40px 0;
-    color: white;
+    color: black;
     text-decoration: none;
     text-transform: uppercase;
     transition: 0.5s;
@@ -40,7 +40,7 @@ a:hover{
 
 /*------------------ BODY SECTION -----------------*/
 body{
-    background: #050801;
+   /* background: #050801; */
     font-family: 'Raleway', sans-serif;  
 }
 
