--- a/src/main/resources/static/css/profilestyle.css
+++ b/src/main/resources/static/css/profilestyle.css
@@ -1,8 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+body{ 
+	background-color: white;
+    animation-name: colorchange;
+    animation-duration: 20s;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+}
+    @keyframes colorchange{
+        0%{background-color: rgb(161, 160, 103);}
+        10%{background-color: rgb(165, 214, 244);}
+        20%{background-color: rgb(174, 187, 255);}
+        30%{background-color: rgb(221, 177, 207);}
+        40%{background-color: rgb(229, 180, 152);}
+        50%{background-color: rgb(165, 164, 105);}
+        60%{background-color: rgb(140, 188, 137);}
+        70%{background-color: rgb(149, 236, 209);}
+        80%{background-color: rgb(217, 145, 141);}
+        90%{background-color: #b96c52;}
+        100%{background-color: rgb(182, 153, 170);}
 }
 
 /*------------------ NAV SECTION -----------------*/
@@ -29,3 +49,83 @@ a:hover{
     background: white;
     color: black;
 }
+/*----------------------- LEFT PANEL ----------------------------*/
+.container3{ 
+	display: inline-block;
+	vertical-align: top;
+	width:33.3%;
+}
+
+/*----------------------- LIST ----------------------------*/
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+.menu-box-number {
+	width: 36px;
+	line-height: 22px;
+	background: transparent;
+	text-align: center;
+	border-radius: 15px;
+	position: absolute;
+	top: 15px;
+	right: 15px;
+	-webkit-transition: all .3s;
+	transition: all .3s;
+}
+
+.menu-box-tab {
+	line-height: 60px;
+	display: block;
+	border-bottom: 1px solid #1f253d;
+	-webkit-transition: background .2s;
+	transition: background .2s;
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+	.menu-box-tab:hover {
+		background: rgb(0, 0, 0);
+		color: white;
+		border-top: 1px solid rgb(176, 157, 235);
+		text-decoration: none;
+	}
+	.menu-box-tab:hover .icon {
+		color: #fff;
+	}
+	.menu-box-tab:hover .menu-box-number {
+		background: rgb(163, 169, 230);
+	}
+		
+
+/*------------------- Settings --------------*/
+.input-field{ 
+	font-size: 15px;
+	margin-top: 15px;
+	margin-bottom: 15px;
+	width: 400px;
+	
+}
+
+[type="date"] {
+  background:#fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)  97% 50% no-repeat ;
+}
+[type="date"]::-webkit-inner-spin-button {
+  display: none;
+}
+[type="date"]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+}
+
+
+
+input {
+  border: 1px solid #c4c4c4;
+  border-radius: 5px;
+  background-color: #fff;
+  padding: 3px 5px;
+  box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
+  width: 190px;
+}
+
